version 0.99.5 - xx-Dec-2010
. [NEW-MAC] Added Mac templates
. [NEW-MAC] Added support for Fullscreen / window mode
. [FIX] Camera: uses points intead of pixels. Works OK in RetinaDisplay mode (issue #1023)
. [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
. [FIX] FileUtils: loads .gz / .ccz files correctly in RetinaDisplay mode (issue #1037)
. [FIX] FileUtils: fixed big memory leaks on .ccz inflater
. [FIX] Sprite: updateTransform can be overriden (issue #824)
. [FIX-MAC] Display Link thread: async images works as expected. Disabled by default.
. [FIX-MAC] MacGLView: VSync is enabled when the view is loaded from the NIB
. [TEST] Added Glyph Designer test case
. [TEST-MAC] Added cocos2d icon to Mac tests

 
version 0.99.5-rc1 - 15-Nov-2010
. [NEW] Director: setProjection calls "updateProjection" delegate if "custom" projection is used
. [NEW] Label: The CCLabelProtocol implements the -(NSString*)string method.
. [NEW] Particles: Added a new type kCCPositionTypeRelative. Useful for "trail" particles. Added Test.
. [NEW] Textures: Added support for pvz.ccz and pvr.gz formats
. [NEW] Textures: TextureCache has a method to test if a texture is already cached (issue #793)
. [NEW] ZipUtils: Added generic functions to uncompress any .gz or .ccz file (issue #1016)
. [FIX] Actions: OrbitCamera doesn't crash on Simulator
. [FIX] CCArray: fastRemoveObjectAtIndex works as expected (issue #1024)
. [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
. [FIX] config: CC_FONT_LABEL_SUPPORT is again, enabled by default
. [FIX] Configuration: removed main bundle from CCConfiguration (issue #839 issue #773)
. [FIX] Director: projection is doubled in RetinaDisplay mode
. [FIX] DrawingPrimitives: don't modify the buffer in RetinaDisplay (issue #995)
. [FIX] EAGLView: Doesn't crash in multithread environment (re-fixed issue #350)
. [FIX] Label: BMFontLabel simplified loading of atlas. Doesn't use CCFileUtils (issue #1031)