@@ -32,6 +32,13 @@
 #import <QuartzCore/CVDisplayLink.h>
 #import "../../CCDirector.h"
 
+enum  {
+	/// If the window is resized, it won't be autoscaled
+	kCCDirectorResize_NoScale,
+	/// If the window is resized, it will be autoscaled (default behavior)
+	kCCDirectorResize_AutoScale,
+};
+
 @interface CCDirector (MacExtension)
 /** converts an NSEvent to GL coordinates */
 -(CGPoint) convertEventToGL:(NSEvent*)event;
@@ -43,19 +50,31 @@
 @interface CCDirectorMac : CCDirector
 {
 	BOOL			isFullScreen_;
+	int				resizeMode_;
+	CGPoint			winOffset_;
+	CGSize			originalWinSize_;
 	
-	// cache
 	MacGLView		*fullScreenGLView_;
 	NSWindow		*fullScreenWindow_;
+	
+	// cache
 	MacGLView		*windowGLView_;
 }
 
 // whether or not the view is in fullscreen mode
 @property (nonatomic, readonly) BOOL isFullScreen;
 
-// Sets the view in fullscreen or window mode
+// resize mode: with or without scaling
+@property (nonatomic, readwrite) int resizeMode;
+
+/** Sets the view in fullscreen or window mode */
 - (void) setFullScreen:(BOOL)fullscreen;
 
+/** Converts window size coordiantes to logical coordinates.
+ Useful only if resizeMode is kCCDirectorResize_Scale.
+ If resizeMode is kCCDirectorResize_NoScale, then no conversion will be done.
+*/
+- (CGPoint) convertToLogicalCoordinates:(CGPoint)coordinates;
 @end
 
 
